--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore node_modules in frontend
-frontend/node_modules/
+*/node_modules/
 
 # Ignore build directory (production files)
 frontend/build/
